# nerd

./: README.md  pyproject.toml  requirements.txt
nerd/nerd/: settings.py  urls.py
nerd/nerd/base/: admin.py  forms.py  urls.py
nerd/nerd/base/migrations/: 0003_extension_public.py  0006_rename_password_extension_sip_password_and_more_squashed_0012_extension_trunk.py
nerd/nerd/base/templates/: base.html
nerd/nerd/base/templates/base/: extensions.html
nerd/nerd/base/templates/registration/: login.html  register.html  verification-mail.html
src/: .gitignore  nerd.cfg.example  pyproject.toml
src/nerd/: __main__.py  asgi.py  settings.py  urls.py  wsgi.py
src/nerd/base/: admin.py  apps.py  models.py  urls.py  views.py
src/nerd/base/migrations/: 0001_initial.py  0002_extension_password.py  0004_callgroupmembership_unique_callgroup_membership_and_more.py  0005_alter_extension_extension_type_and_more.py  0007_extension_unique_handset.py  0008_alter_extension_extension_type.py
src/nerd/base/templates/: base.html
src/nerd/base/templates/base/: extension_edit.html  index.html  login.html  phonebook.html
src/nerd/base/templates/registration/: login.html  verification-failed.html  verification-success.html
